--- a/Ejercicios-CSS/ej_cv.html
+++ b/Ejercicios-CSS/ej_cv.html
@@ -1,44 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <title>CV Nombre Apellido</title>
+	<meta charset="UTF-8">
+	<title>CV Nombre Apellido</title>
+	<link rel="shortcut icon" href="imagenes/satoshito89_02.png"
 </head>
+<style>
+	body {
+		text-align: center;
+		font-family: Verdana, Geneva, Tahoma, sans-serif;
+		background: linear-gradient(to right, #90BCBC, #BE9EB9);
+	}
+	div {
+		border: 2px dashed #1f1bff;
+		margin: 10px;
+		padding: 5px 30px;
+		border-radius: 15px;
+		box-shadow: 10px 12px #333899;
+	}
+	h3{
+		text-shadow: 5px 8px #999;
+	}
+	img {
+		width: 50px;
+		float: left;
+	}
+</style>
+
 <body>
 
-<div>
-    <h1>Nombre Alumno</h1>
-    <h2>Ing. en Computacion</h2>
-</div>
+	<div id="div1">
+		<h1>Nombre Alumno</h1>
+		<h2>Ing. en Computacion</h2>
+		<img src="imagenes/icono_usuario.jpg">
+	</div>
 
-<div>
-    <h3>Datos Personales</h3>
-    <p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
-    <p><span>Email:</span> email@email.com</p>
-</div>
+	<div>
+		<h3>Datos Personales</h3>
+		<p><span>Fecha de Nacimiento:</span> dd/mm/aaaa</p>
+		<p><span>Email:</span> email@email.com</p>
+	</div>
 
-<div>
-    <h3>Formacion Academica</h3>
-    <p><span>Carrera:</span> Ingeniería XXXXX</p>
-    <p><span>Universidad:</span> Universidad Católica de Córdoba</p>
-    <p><span>Año de Ingreso:</span> 2018</p>
-</div>
+	<div>
+		<h3>Formacion Academica</h3>
+		<p><span>Carrera:</span> Ingeniería XXXXX</p>
+		<p><span>Universidad:</span> Universidad Católica de Córdoba</p>
+		<p><span>Año de Ingreso:</span> 2018</p>
+	</div>
 
-<div>
-    <h3>Cursos</h3>
+	<div>
+		<h3>Cursos</h3>
 
-    <div>
-        <h4>Nombre Curso 1</h4>
-        <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
-    </div>
+		<div>
+			<h4>Nombre Curso 1</h4>
+			<p><span>Lugar:</span> Nombre Institución</p>
+			<p><span>Año:</span> XXXX </p>
+		</div>
 
-    <div>
-        <h4>Nombre Curso 2</h4>
-        <p><span>Lugar:</span> Nombre Institución</p>
-        <p><span>Año:</span> XXXX </p>
-    </div>
-</div>
+		<div>
+			<h4>Nombre Curso 2</h4>
+			<p><span>Lugar:</span> Nombre Institución</p>
+			<p><span>Año:</span> XXXX </p>
+		</div>
+	</div>
 
 </body>
+
 </html>
