ejercicios javascript resueltos

--- a/Ejercicios-JavaScript/primerWeb.html
+++ b/Ejercicios-JavaScript/primerWeb.html
@@ -15,14 +15,14 @@
         <p>
             <!--Label es incluido por cuestiones de Accesibilidad-->
             <!--Note que Label y el id del elemento poseen igual nombre-->
-            <label for="distancia"> Distancia</label> = <input id="distancia" type="text" name="inp_distancia">
+            <label for="distancia"> Distancia</label> = <input id="distancia" type="text" name="inp_distancia" >
             <select name="unidades">
                 <option value="unid_metros">Metros</option>
                 <option value="unid_yardas">Yardas</option>
                 <option value="unid_pie">Pies</option>
                 <option value="unid_pulgadas">Pulgadas</option>
             </select>
-            <button>
+            <button onclick="cargarWeb()">
                 Segunda Web!
             </button>
         </p>
