--- a/Ejercicios-CSS/ej_leyes.html
+++ b/Ejercicios-CSS/ej_leyes.html
@@ -3,6 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Ley 10.208 - Política Ambiental Provincial</title>
+	<style>
+		.titulo{
+			list-style-type: upper-roman;
+			font-size: larger;
+		}	
+		.subitems{
+			list-style-type: lower-alpha;
+		}
+
+	</style>
 </head>
 <body>
 <h1>La Legislatura de la Provincia de Córdoba</h1>
